# -

./: CMakeLists.txt  README.md  main.cpp  recognize.cpp  recognize.hpp
params/: params.txt  path.txt
